@@ -1,5 +1,9 @@
 * What is new in gsl-1.3+:
 
+** Fixed a bug in gsl_permutation_canonical_to_linear which caused the
+output to always be zero, and the input permutation to be incorrectly
+replaced by the output.
+
 ** Fixed a bug is gsl_ran_discrete which could cause uninitialised
 data to be returned for some distributions.
 
